k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: perfx
  labels:
    app.kubernetes.io/name: perfx
